# string-color

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lib/: index.ts
src/: lib.rs
test/: string_color.spec.ts
